<resources>
    <string name="app_name">Find a Roommate!</string>
    <string name="title_activity_login">Sign in/Register</string>
    <string name="action_to_home">Home</string>
    <string name="action_to_browse">Browse</string>
    <string name="action_view_my_profile">My Profile</string>
    <string name="action_view_matches">Matches</string>
    <string name="about">This app was created by Joseph Passanante and Alexandra Sazhin, during SER210. The app is made to be a simple way for quinnipiac students to find roommates.
    Enjoy!</string>

    <string name="CreateAccountTite">Create Your Account!</string>
    <string name="required">Required.</string>
    <string name="firstname">First Name</string>
    <string name='lastname'>Last Name</string>
    <string name="housingpref">Housing Preference</string>
    <string name="phonenumber">Phone Number</string>

    <string-array name="titles">
        <item>My Profile</item>
        <item>Browse</item>
        <item>Matches</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="loginTitle">Enter your login information to get started!</string>

    <!-- Login Hints -->
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email</string>

    <!-- Login Button Titles -->
    <string name="createAccount">Create</string>
    <string name="Login">Log In</string>

    <!-- Login Sign'ed in titles -->
    <string name="sign_out">Sign Out</string>
    <string name="verify">Verify Email</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="signed_out">Signed Out</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string-array name="PartyOptions">
        <item>No partying</item>
        <item>Go out every once in a while</item>
        <item>Every weekend</item>
        <item>During the week</item>
    </string-array>
    <string name="upload_image">Upload Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name = "remember">Remember this account for the future!</string>
    <string name = "descriptionfield">Description of yourself</string>
    <string name = "match">Match</string>
    <string name = "contact">Contact</string>
</resources>
