<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context = ".HomeActivity" >

    <item android:id="@+id/action_home"
        android:title="@string/action_to_home"
        android:orderInCategory="1"/>

    <item android:id="@+id/action_profile"
        android:title="@string/action_view_my_profile"
        android:orderInCategory="2"/>

    <item android:id="@+id/action_browse"
        android:title="@string/action_to_browse"
        android:orderInCategory="3"
        />

    <item android:id="@+id/action_matches"
        android:title="@string/action_view_matches"
        android:orderInCategory="4"
        />

    <item android:id="@+id/action_other"
        android:title="Edit"
        android:visible="false"
        android:orderInCategory="5"
        />

</menu>